feat: 更新所有模块版本至 3.2.0，并优化相关文档